Table Language {
  id String [pk]
  name String

  createdById Int [ref: > User.id, null]
  updatedById Int [ref: > User.id, null]
  deletedById Int [ref: > User.id, null]

  deletedAt DateTime [null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table User {
  id Int [pk, increment]
  email String [unique]
  name String
  password String
  phoneNumber String
  avatar String [null]
  totpSecret String [null]
  status UserStatus [default: 'INACTIVE']
  roleId Int [ref: > Role.id]

  createdById Int [ref: > User.id, null]
  updatedById Int [ref: > User.id, null]
  deletedById Int [ref: > User.id, null]

  deletedAt DateTime [null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table UserTranslation {
  id Int [pk, increment]
  userId Int [ref: > User.id]
  languageId String [ref: > Language.id]
  address String [null]
  description String [null]

  createdById Int [ref: > User.id, null]
  updatedById Int [ref: > User.id, null]
  deletedById Int [ref: > User.id, null]

  deletedAt DateTime [null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table VerificationCode {
  id Int [pk, increment]
  email String
  code String
  type VerificationCodeType

  expiresAt DateTime
  createdAt DateTime [default: `now()`]
  
  indexes {
    (email, type) [unique]
    expiresAt
  }
}

Table RefreshToken {
  token String [unique]
  userId Int [ref: > User.id]
  deviceId Int [ref: > Device.id]

  expiresAt DateTime
  createdAt DateTime [default: `now()`]

  indexes {
    expiresAt
  }
}

Table Permission {
  id Int [pk, increment]
  name String
  description String
  path String
  method HTTPMethod
  module String

  createdById Int [ref: > User.id, null]
  updatedById Int [ref: > User.id, null]
  deletedById Int [ref: > User.id, null]

  deletedAt DateTime [null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table Role {
  id Int [pk, increment]
  name String [unique]
  description String
  isActive Boolean [default: true]

  createdById Int [ref: > User.id, null]
  updatedById Int [ref: > User.id, null]
  deletedById Int [ref: > User.id, null]

  deletedAt DateTime [null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table Product {
  id Int [pk, increment]
  publishedAt DateTime [null]
  name String
  basePrice Float
  virtualPrice Float
  brandId Int [ref: > Brand.id]
  images String[]
  variants Json

  createdById Int [not null, ref: > User.id]
  updatedById Int [ref: > User.id, null]
  deletedById Int [ref: > User.id, null]

  deletedAt DateTime [null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table ProductTranslation {
  id Int [pk, increment]
  productId Int [ref: > Product.id]
  languageId String [ref: > Language.id]
  name String
  description String

  createdById Int [ref: > User.id, null]
  updatedById Int [ref: > User.id, null]
  deletedById Int [ref: > User.id, null]

  deletedAt DateTime [null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table Category {
  id Int [pk, increment]
  name String
  logo String [null]
  parentCategoryId Int [ref: > Category.id, null]
  
  createdById Int [ref: > User.id, null]
  updatedById Int [ref: > User.id, null]
  deletedById Int [ref: > User.id, null]

  deletedAt DateTime [null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table CategoryTranslation {
  id Int [pk, increment]
  categoryId Int [ref: > Category.id]
  languageId String [ref: > Language.id]
  name String
  description String

  createdById Int [ref: > User.id, null]
  updatedById Int [ref: > User.id, null]
  deletedById Int [ref: > User.id, null]

  deletedAt DateTime [null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table SKU {
  id Int [pk, increment]
  sku String
  stock Int
  image String [null]
  productId Int [ref: > Product.id]
  createdById Int [ref: > User.id]
  updatedById Int [ref: > User.id, null]
  deletedById Int [ref: > User.id, null]

  deletedAt DateTime [null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table Brand {
  id Int [pk, increment]
  name String
  logo String [null]

  createdById Int [ref: > User.id]
  updatedById Int [ref: > User.id, null]
  deletedById Int [ref: > User.id, null]

  deletedAt DateTime [null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table BrandTranslation {
  id Int [pk, increment]
  brandId Int [ref: > Brand.id]
  languageId String [ref: > Language.id]
  name String
  description String

  createdById Int [ref: > User.id, null]
  updatedById Int [ref: > User.id, null]
  deletedById Int [ref: > User.id, null]

  deletedAt DateTime [null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table CartItem {
  id Int [pk, increment]
  quantity Int
  skuId Int [ref: > SKU.id]
  userId Int [ref: > User.id]

  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table ProductSKUSnapshot {
  id Int [pk, increment]
  productId Int
  productName String
  productTranslations Json [null]
  skuPrice Float
  image String [null]
  skuValue String
  quantity Int
  skuId Int [ref: > SKU.id]
  orderId Int [ref: > Order.id]

  createdAt DateTime [default: `now()`]
}

Table Order {
  id Int [pk, increment]
  userId Int [ref: > User.id]
  shopId Int [ref: > User.id]
  paymentId Int [ref: > Payment.id, null]
  status OrderStatus
  receiver Json

  createdById Int [ref: > User.id, null]
  updatedById Int [ref: > User.id, null]
  deletedById Int [ref: > User.id, null]

  deletedAt DateTime [null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table Review {
  id Int [pk, increment]
  content String
  rating Int
  updateCount Int [default: 0]
  productId Int [ref: > Product.id]
  orderId Int [ref: > Order.id]
  userId Int [ref: > User.id]
  
  deletedAt DateTime [null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table ReviewMedia {
  id Int [pk, increment]
  type MediaType
  url String
  reviewId Int [ref: > Review.id]

  createdAt DateTime [default: `now()`]
}

Table Payment {
  id Int [pk, increment]
  status PaymentStatus
  totalAmount Float
  userId Int [ref: > User.id]

  deletedAt DateTime [null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table Websocket {
  id Int [pk, increment]
  userId Int [ref: > User.id]
  socketId String

  createdAt DateTime [default: `now()`]
}

Table PaymentTransaction {
  id Int [pk, increment]
  gateway String
  transactionDate DateTime [default: `now()`]
  accountNumber String
  subAccount String [null]
  amountIn Int [default: 0]
  amountOut Int [default: 0]
  accumulated Int [default: 0]
  code String [null]
  transactionContent String [null]
  referenceNumber String [null]
  body String [null]

  createdAt DateTime [default: `now()`]
}

Table Message {
   id Int [pk, increment]
   fromUserId Int [ref: > User.id]
   toUserId Int [ref: > User.id]
   content String

   readAt DateTime [null]
   createdAt DateTime [default: `now()`]
}

Table Device {
  id int [pk, increment]
  userId int [not null, ref: > User.id]
  userAgent varchar(1000) [not null]
  ip varchar(50) [not null]
  lastActive timestamp
  createdAt timestamp [default: `now()`]
  isActive boolean [default: true]
}

Enum OrderStatus {
  PENDING_PAYMENT
  PENDING_PICKUP
  PENDING_DELIVERY
  DELIVERED
  RETURNED
  CANCELLED
}

Enum VerificationCodeType {
  REGISTER
  FORGOT_PASSWORD
  LOGIN
  DISABLE_2FA
  LOGIN_2FA
}

Enum UserStatus {
  ACTIVE
  INACTIVE
  BLOCKED
}

Enum PaymentStatus {
  PENDING
  COMPLETED
  FAILED
  REFUNDED
}

Enum MediaType {
  IMAGE
  VIDEO
}

Enum HTTPMethod {
  GET
  POST
  PUT
  DELETE
  PATCH
  OPTIONS
  HEAD
}

// Many-to-Many Relationships
Table ProductsCategories {
  product_id Int [ref: > Product.id]
  category_id Int [ref: > Category.id]
}

Table PermissionsRoles {
  permission_id Int [ref: > Permission.id]
  role_id Int [ref: > Role.id]
}